--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@300&family=Didact+Gothic&display=swap" rel="stylesheet">
 <style type="text/css">
 	
+	/* estilos gerais */
 	body{
 	  width: 550px;
 	  padding: 3px;
@@ -18,7 +19,9 @@
 	  font-family: 'Didact Gothic', sans-serif;
 	  font-size: 15px;
 	}
+	/* estilos gerais */
 	
+	/* componente alert bootstrap */
 	.alert {
 	  margin-bottom: 1px;
 	  height: 30px;
@@ -26,10 +29,12 @@
 	  padding:0px 15px;
 	}
 	
+	/* retira o sublinhado dos links ao passar o cursor */
 	a:hover{
 	  text-decoration: none;
 	}
-
+	
+	/* div que exibe o resultado da busca */
 	#status-busca{
 	  font-size: 13px;
 	  margin-top: 8px;
@@ -38,11 +43,13 @@
 	  margin-right: 2px;
 	}
 	
+	/* div que exibe mensagens de erro */
 	#erro{
 	  font-size: 12px;
 	  margin-top: 8px;
 	}
 	
+	/* customização da barra de scroll */
 	::-webkit-scrollbar {
 	  width: 4px;
 	  border: 1px solid #d5d5d5;
@@ -57,6 +64,7 @@
 	  border-radius: 0;
 	  background: #b0b0b0;
 	}
+	/* customização da barra de scroll */
 
 </style>
 
