--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 	<div id='status-busca'></div>
 	<div id='erro'></div>
 	<footer class="mt-2 text-center" style='font-size: 13px; background-color: #4E5B60;'>
-		<a class="text-white" href="https://www.paypal.com/donate?hosted_button_id=MSN54ZZLSGPP2" data-toggle="tooltip" data-placement="bottom" title="Support us. Make a contribution of any value!" target='_blank'>Donate &#10084;</a>
+		<a class="text-white" href="" data-toggle="tooltip" data-placement="bottom" title="Support us. Make a contribution of any value!" target='_blank'>Donate &#10084;</a>
 	</footer>
 
 </body>
