--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
 	  background: #b0b0b0;
 	}
 	/* customização da barra de scroll */
+	
+	select, input, button{height: 33px !important; font-size: 15px !important;}
 
 </style>
 
