--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	}
 	
 	/* div que exibe o resultado da busca */
-	#status-busca{
+	#resultado-busca{
 	  font-size: 13px;
 	  margin-top: 8px;
 	  margin-bottom: 5px;
@@ -96,7 +96,7 @@
 		</div>
 	</div>
   
-	<div id='status-busca'></div>
+	<div id='resultado-busca'></div>
 	<div id='erro'></div>
 	<footer class="mt-2 text-center" style='font-size: 13px; background-color: #4E5B60;'>
 		<a class="text-white" href="" data-toggle="tooltip" data-placement="bottom" title="Support us. Make a contribution of any value!" target='_blank'>Donate &#10084;</a>
