--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 	</div>
 		
 	<div class="input-group mt-3">
-		<select id="option" class="form-control rounded-0 form-control-sm shadow-none" id="exampleFormControlSelect1">
+		<select id="option" class="form-control rounded-0 form-control-sm shadow-none">
 		  <option value="">All</option>
 		  <option value="Video">Video</option>
 		  <option value="Audio">Audio</option>
